# consumer-product-recalls-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TODO.md  fly.toml  openapi.json  pyproject.toml  render.yaml
.claude/agents/: api-spec-generator.md  codebase-analyzer.md  documentation-updater.md  sql-reviewer.md  tests-refresher.md
.github/workflows/: ci.yml  deploy.yml
documentation/: api-reference.md  architecture.md  data_contract.md  development.md  documentation_model.md  frontend-api-docs-handoff.md  operations.md
documentation/decisions/: 0001-read-only-by-construction.md  0002-sqlalchemy-core-async-asyncpg-no-orm.md  0003-uniform-error-envelope.md  0004-keyset-cursor-codec.md  0005-pydantic-settings-fail-loud-at-boot.md  0006-per-ip-rate-limiting-slowapi.md  0007-http-cache-control-nightly-rebuild.md  0008-structlog-request-id-correlation-middleware.md  0009-testing-strategy-unit-integration-contract.md  0010-openapi-committed-snapshot-drift-contract.md  0011-recall-grain-fts-option-b.md  README.md  (+3 more)
project_scope/: api-audit-notes.md  data-side-provenance-handover-2026-06-19.md  deployment-plan.md  fastapi-serving-layer-plan.md  gold-audit-charter.md  handover-announce-date-timeseries-2026-06-20.md  handover-api-docs-upc-discoverability-and-uscg-severity-caveat-2026-06-20.md  handover-usda-uscg-firm-sidecar-500-2026-06-20.md  provenance-analysis-2026-06-17.md  provenance-apply-plan.md  recalls-search-api-plan.md  recalls-search-gold-plan.md  stats-endpoints-and-firm-recalls-plan.md  surface-review-2026-06-17.md
tests/: test_db.py  test_deps.py  test_errors.py  test_logging.py  test_models_common.py  test_models_firms.py  test_models_products.py  test_models_recalls.py  test_pagination.py  test_queries_firms.py  test_queries_products.py  test_queries_recalls.py  test_queries_stats.py  test_settings.py  test_smoke.py
(+148 files in other folders)
