[project]
name = "consumer-product-recalls-api"
version = "0.2.0"
description = "Open, read-only FastAPI serving layer over the consumer product recalls gold marts."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Adrian Nesta" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "structlog>=24.1",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "hypothesis>=6.100",
    "ruff>=0.15",
    "pyright>=1.1.380",
    "pre-commit>=3.7",
    "testcontainers[postgres]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recalls_api"]

# --- Lint / format (mirror the pipeline's ruff gate) ---
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["recalls_api"]

# --- Types ---
[tool.pyright]
pythonVersion = "3.12"
include = ["src", "tests"]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

# --- Tests ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=recalls_api --cov-report=term-missing"

[tool.coverage.run]
source = ["recalls_api"]
branch = true

[tool.coverage.report]
show_missing = true
# CI enforces the floor with `pytest --cov-fail-under=85` (see project_scope/build/05 + 08).
# It is intentionally NOT in addopts so early scaffold commits aren't blocked before the
# endpoints and their tests land; coverage climbs to >=85 as each feature branch adds tests.
